mega_footer 7.x-1.4, 2016-02-03
---------------------------

- Deprecated contact fields
- Added alt text field for logo