@@ -2,7 +2,7 @@ name = Mega Footer
 description = CSS/jQuery drop-down, drop-right and drop-left menus to be placed in blocks
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.4
+version = 7.x-1.5
 dependencies[] = fontawesome
 dependencies[] = menu
 scripts[] = js/megafoot.js
